# arcade-knight

./: .gitignore  Cargo.toml  README.md  TODO  build-wasm.sh
src/: animation.rs  character.rs  direction.rs  enemy.rs  life_bar.rs  main.rs  player.rs  resources.rs  screen_drawer.rs  timers.rs
wasm/static/: gl.js  index.html
